--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
-    <title>Document</title>
+    <title>Equação 2° Grau</title>
     <style>
       input::-webkit-outer-spin-button,
       input::-webkit-inner-spin-button {
         -webkit-appearance: none;
         margin: 0;
       }
-      input[type="number"] {
+      /* input[type="number"] {
         -moz-appearance: textfield;
-      }
+      } */
     </style>
   </head>
 
