--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
 
 <body>
   <div id="container">
-    <h1>Calculadora de Equação de 2° grau</h1>
+    <h1>Calculadora de Equação 2° grau</h1>
     <form id="caixa-delta">
       <div>
-      <label for="vlA">Digite o valor de a</label>
-      <input type="number" name="vlA" id="vlA" />
-    </div>
-    <div>
-      <label for="vlB">Digite o valor de b</label>
-      <input type="number" name="vlB" id="vlB" />
-    </div>
+        <label for="vlA">Insira o valor de A :</label>
+        <input type="number" name="vlA" id="vlA" required />
+      </div>
+      <div>
+        <label for="vlB">Insira o valor de B :</label>
+        <input type="number" name="vlB" id="vlB" required />
+      </div>
 
-    <div>
-      <label for="vlC">Digite o valor de c</label>
-      <input type="number" name="vlC" id="vlC" />
-    </div>
+      <div>
+        <label for="vlC">Insira o valor de C :</label>
+        <input type="number" name="vlC" id="vlC" required />
+      </div>
 
       <div id="box-button">
         <button type="button" onclick="calcular()">Calcular</button>
@@ -49,7 +49,7 @@
         <!-- Delta: <span >-</span> -->
       </div>
       <div class="result-raiz">
-        <div id="x1" >
+        <div id="x1">
           <!-- Raízes: x1 = <span >-</span><br> -->
         </div>
         <div id="x2">
